<?xml version="1.0" encoding="utf-8"?>
<resources>
	<string name="app_name">SMS service</string>
	<string name="login">Login</string>
	<string name="password">Password</string>
	<string name="connect">Connect</string>
	<string name="stopservice">Stop Service</string>
	<string name="configuration">Configuration</string>
	<string name="preferences">Preferences</string>
	<string name="server">Server</string>
	<string name="serveraddress">Server address</string>
	<string name="port">Port</string>
	<string name="username">Username</string>
	<string name="service">Service</string>
	<string name="rememberpassword">Remember password</string>
	<string name="checkfrequency">Check period</string>
	<string name="maximumsms">Maximum SMS</string>
	<string name="usesendwaves">Use send waves</string>
	<string name="waves">Waves</string>
	<string name="DEFAULT_waves">10,6</string>
	<string name="checkonnetwork">Check on network</string>
	<string name="checkfrequencyonmaximumsms">Period on maximum SMS</string>
	<string name="changecheckfrequencyonmaximumsms">Different period on maximum SMS</string>
	<string name="DESC_changecheckfrequencyonmaximumsms_on">Period below will be used</string>
	<string name="DESC_usesendwaves_on">Using send waves as below</string>
	<string name="DESC_usesendwaves_off">Use send waves to avoid SMS being blocked by telco</string>
	<string name="DESC_sendwaves">Describe waves using the format: number of SMS per wave,timeout between waves</string>
	<string name="DESC_maximumsms">Number of SMS loaded in one server  connection</string>
	<string name="DESC_changecheckfrequencyonmaximumsms_off">Same period will be used</string>
	<string name="DESC_checkfrequencyonmaximumsms">Period used if last server contact returned maximum number of SMS (in seconds)</string>
	<string name="DESC_changecheckfrequencyonmaximumsms">Use a different period if last server contact returned maximum number of SMS</string>
	<string name="DESC_server">Server address from which SMS are read</string>
	<string name="DESC_checkonnetwork">Contact server if wifi/data becomes available</string>
	<string name="DESC_checkfrequency">Period at which SMS server will be contacted (in seconds)</string>
	<string name="DESC_port">Server port</string>
	<string name="DIALOG_server">Server address</string>
	<string name="DIALOG_port">Server port</string>
	<string name="DIALOG_connecting">Connecting to server</string>
	<string name="DIALOG_invalidurl">Invalid server address in preferences</string>
	<string name="DIALOG_username">Username</string>
	<string name="BUTTON_gotopreference">Go to preferences</string>
	<string name="BUTTON_cancel">Cancel</string>
	<string name="DIALOG_password">Password</string>
	<string name="PREFERENCE_server">server</string>
	<string name="PREFERENCE_catserver">catserver</string>
	<string name="defaultperiod">1200</string>
	<string name="ERROR_Noconnection">No connection available on device</string>
	<string name="MESSAGE_networkhaschangedforthebest">Yay, we have network connection!</string>
	<string name="MESSAGE_servervaluesetto">Server link set to %1$s</string>
	<string name="MESSAGE_passwordvaluesetto">Password set to %1$s</string>
	<string name="MESSAGE_usernamevaluesetto">Username value set to %1$s</string>
	<string name="MESSAGE_lostconeectiontoservice">Lost connection to service</string>
	<string name="ERROR_Couldnotencodedata">Could not encode url, username and password</string>
	<string name="MESSAGE_connectingtoserver">Connecting to server...</string>
	<string name="MESSAGE_validconnectiontoserver">Valid connection</string>
</resources>
